panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__linkage__test_internal_linkage_for_function_definitions.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/linkage/test_internal_linkage_for_function_definitions.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/linkage/test_internal_linkage_for_function_definitions.c"
   (declaration puts~0 `fn(∅: ptr<char const>) -> int` ∅)
   (function-definition
      f~1 `fn() -> void`
      (compound-statement
         (expression
            (call (name puts~0 `fn(∅: ptr<char const>) -> int`)
               (string "in f")))))
   (function-definition
      main~3 `fn() -> int`
      (compound-statement
         (expression (call (name f~1 `fn() -> void`))))))

----- stderr -----
