panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__linkage__test_linkage_of_string_literals.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/linkage/test_linkage_of_string_literals/extern_fn.c
    - panko/tests/cases/execute/linkage/test_linkage_of_string_literals/main.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/linkage/test_linkage_of_string_literals/extern_fn.c"
   (declaration puts~0 `fn(∅: ptr<char const>) -> int` ∅)
   (function-definition
      extern_fn~1 `fn() -> void`
      (compound-statement
         (expression
            (call (name puts~0 `fn(∅: ptr<char const>) -> int`)
               (string "world"))))))
(translation-unit "panko/tests/cases/execute/linkage/test_linkage_of_string_literals/main.c"
   (declaration puts~0 `fn(∅: ptr<char const>) -> int` ∅)
   (declaration extern_fn~1 `fn() -> void` ∅)
   (function-definition
      main~2 `fn() -> int`
      (compound-statement
         (expression
            (call (name puts~0 `fn(∅: ptr<char const>) -> int`)
               (string "hello")))
         (expression (call (name extern_fn~1 `fn() -> void`))))))

----- stderr -----
