panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__linkage__test_redeclare_tentative_definition_of_static_variable.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/linkage/test_redeclare_tentative_definition_of_static_variable.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/linkage/test_redeclare_tentative_definition_of_static_variable.c"
   (declaration x~0 `int` ∅)
   (function-definition
      main~1 `fn() -> int`
      (compound-statement
         (return (name x~0 `int`))))
   (declaration x~0 `int` 42))

----- stderr -----
