panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__linkage__test_static_block_scope_variables.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/linkage/test_static_block_scope_variables.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/linkage/test_static_block_scope_variables.c"
   (function-definition
      f~0 `fn() -> int`
      (compound-statement
         (declaration x~2 `int` 42)
         (return (post-increment (name x~2 `int`)))))
   (function-definition
      g~6 `fn() -> int`
      (compound-statement
         (declaration x~8 `int` 27)
         (return (post-increment (name x~8 `int`)))))
   (function-definition
      main~12 `fn() -> int`
      (compound-statement
         (declaration printf~14 `fn(∅: ptr<char const>, ...) -> int` ∅)
         (expression
            (call (name printf~14 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%d %d\n")
               (call (name f~0 `fn() -> int`))
               (call (name g~6 `fn() -> int`))))
         (expression
            (call (name printf~14 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%d %d\n")
               (call (name f~0 `fn() -> int`))
               (call (name g~6 `fn() -> int`))))
         (expression
            (call (name printf~14 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%d %d\n")
               (call (name f~0 `fn() -> int`))
               (call (name g~6 `fn() -> int`)))))))

----- stderr -----
